@@ -15,6 +15,7 @@ linux (4.2~rc8-1~exp2) UNRELEASED; urgency=medium
   * Fix last issue that prevents a reproducible build (Closes: #769844):
     - DocBook: Use a fixed encoding for output
   * debian/bin,debian/control,debian/lib/python: Use Python 3
+  * debian/bin/genorig.py: Make orig tarballs reproducible
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 25 Aug 2015 18:50:57 +0100
 
